[package]
name = "mchat"
version = "0.1.0"
edition = "2018"
authors = ["Cuckoo <cuckooemm@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server/main.rs"

# [[bin]]
# name = "client"
# path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
log = { version = "0.4.14" }
fern = { version = "0.6.0" }
chrono = { version = "0.4.19" }
bytes = { version = "1.0.1" }
toml = "0.5.8"
serde = "1.0.89"
serde_derive = "1.0.89"
uuid = { version = "0.8", features = ["serde", "v4"] }
snafu = { version = "0.6.10"}